--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.0'
 }
 
 group = 'io.github.sdxqw'
@@ -11,6 +12,23 @@ project.ext.lwjglNatives = "natives-windows"
 
 repositories {
     mavenCentral()
+}
+
+shadowJar {
+    archiveBaseName.set('shadow')
+    archiveClassifier.set('')
+    archiveVersion.set('')
+    manifest {
+        attributes 'Main-Class': 'io.github.sdxqw.Main'
+    }
+    mergeServiceFiles()
+    from {
+        sourceSets.main.runtimeClasspath.filter { it.name.endsWith('jar') }
+    }
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
+    exclude 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt'
+    exclude 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt'
+    exclude 'META-INF/INDEX.LIST'
 }
 
 dependencies {
